fixing alignment and padding top

--- a/src/index.css
+++ b/src/index.css
@@ -1753,8 +1753,8 @@ input:focus {
 
   .containerImage {
     display: flex;
-    align-items: center;
-    padding-top: 15px;
+    align-self: center;
+    padding-top: 30px;
     width: 150px;
     height: auto;
   }
